# auto-git-committer

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  gui.rs  logic.rs  main.rs  ui.rs
